# channel-rs

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md
.cargo/: config.toml
example/: Cargo.toml
example/src/: main.rs
src/: channel.rs  lib.rs  test.rs
src/channel/: asynchronous.rs  bidirectional.rs  mod.rs  time_series.rs
src/utils/: metrics_utils.rs  mod.rs  time_util.rs  vec_utils.rs
