[package]
name = "channel"
version = "0.1.6"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/fawdlstty/channel-rs"
homepage = "https://github.com/fawdlstty/channel-rs"
description = "Rust advanced queue library"
keywords = ["channel", "queue", "dispatch", "sender", "receiver"]
categories = ["algorithms", "concurrency", "data-structures"]

[dependencies]
chrono = "0.4.26"

[features]
default = []
