[package]
name = "channel"
version = "0.2.1"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/fawdlstty/channel-rs"
homepage = "https://github.com/fawdlstty/channel-rs"
description = "Rust advanced queue library"
keywords = ["channel", "queue", "dispatch", "sender", "receiver"]
categories = ["algorithms", "concurrency", "data-structures"]

[dependencies]
async-sema = "0.1.2"
async-signal = "0.2.9"
chrono = "0.4.26"
tokio = { version = "1.38.0", features = ["full"] }

[features]
default = ["metrics"]
metrics = []
